# cplusplus

./: README.md  Scarab.cpp  Scarab.h  main.cpp  run_scarab.sh  scarab_program
NLP/: CMakeLists.txt  Dockerfile  build_container.sh
NLP/src/: image_processing.cpp  image_processing_2.cpp  image_processor.cpp  image_processor.h  main.cpp  ocr_tesseract.cpp  ocr_tesseract.h  test.cpp
scarab/: Scarab.cpp
